--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+*, *::after, *::before {
+    margin: 0;
+    padding: 0;
+}
+
+html, body { height: 100%; }
+body { box-sizing: border-box; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+ul, ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+input, button, textarea, select {
+    font: inherit
+}
