--- a/src/app/products/components/header/cart/cart.component.html
+++ b/src/app/products/components/header/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div class="cart">
-    <div class="cart_noproduct" *ngIf="products.length <= 0">
+    <div class="cart__noproduct" *ngIf="products.length <= 0">
         <p>no product selected</p>
     </div>
 
