--- a/src/app/products/components/header/header.component.html
+++ b/src/app/products/components/header/header.component.html
@@ -1,21 +1,6 @@
 <div class="container">
-    <div class="header">
-        <img src="../../../../assets/bejamas.png" alt="bejamas"/>
+    <app-navbar></app-navbar>
 
-        <div class="counter-container">
-            <span *ngIf="counterProduct > 0">{{counterProduct}}</span>
-            <img 
-                src="../../../../assets/cart.png" 
-                alt="cart" 
-                (click)="toggleShowCart()" />
-                
-            <app-cart *ngIf="showCart"></app-cart>
-        </div>
-    </div>
-
-    <app-banner [productFeatured]="productFeatured">
-    </app-banner>
-
-    <app-details [productFeatured]="productFeatured">
-    </app-details>
+    <app-featured [productFeatured]="productFeatured">
+    </app-featured>
 </div>
