--- a/src/app/products/components/header/header.component.html
+++ b/src/app/products/components/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div>
     <app-navbar></app-navbar>
 
-    <app-featured [productFeatured]="productFeatured">
+    <app-featured>
     </app-featured>
 </div>
