--- a/src/app/products/components/body/list-product/list-product.component.css
+++ b/src/app/products/components/body/list-product/list-product.component.css
@@ -73,3 +73,24 @@
     font-weight: 400;
     color: #656565;
 }
+
+.products__pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 107px;
+    margin-bottom: 61px;
+}
+
+.pagination__btn{
+    border: none;
+    cursor: pointer;
+    background: transparent;
+}
+
+.pagination__icon {
+    width: 50px;
+    height: 50px;
+    font-size: 50px;
+}
